Don't hang forever if there are no ways